--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <div class="main">
+  <div class="main" role="main">
     <header>
       <div class="container">
         <div class="subcontainer">
