Updated CSS and index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <div class="main" role="main">
-    <header>
+    <div class="header">
       <div class="container">
         <div class="subcontainer">
           <nav class="navbar">
@@ -46,7 +46,7 @@
           </nav>
         </div>
       </div>
-      <div class="hero subcontainer">
+      <div class="hero">
         <div class="hero-txt">
           <h1>We are creatives</h1>
         </div>
@@ -54,7 +54,7 @@
           <img src="./images/icon-arrow-down.svg" alt="arrow" />
         </div>
       </div>
-    </header>
+    </div>
     <div class="client-data">
       <div class="grid">
         <div class="card card-1">
