Updated CSS and index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <div class="subcontainer">
           <nav class="navbar">
-            <a href="#" class="nav-branding">
+            <a href="index.html" class="nav-branding">
               <img src="./images/logo.svg" alt="logo" class="logo-img" />
             </a>
             <ul class="nav-menu">
@@ -36,7 +36,7 @@
               <li class="nav-item">
                 <a href="#" class="nav-link">Projects</a>
               </li>
-              <button class="nav-link">Contact</button>
+              <li class="nav-link contact"><a href="#">Contact</a></li>
             </ul>
             <div class="hamburger">
               <span class="bar"></span>
